Pixelated canvases Worsen main loop, so it matches GM's Moved built-in functions to a new class Added multiple pointless and non-working interface elements Fixed bugs (which ones? I dunno!)
Room editor:
Added room speed field
Added tools - add, add multiple, move, and delete. Sorry, right clicking isn't 'weby'
Fixed the room grid bugging out sometimes. This goddamn bug was the fucking hardest to figure out. Looks like I was using closePath() in the wrong way.
Now it scrolls if it's too big.

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
 .grid-resource.resource-room {
 	grid-template-columns: 300px 1fr;
 }
-.grid-resource.resource-sprite .preview {
+.grid-resource.resource-room .preview {
 	overflow: auto;
 	max-height: 80vh;
 }
@@ -145,4 +145,8 @@
 }
 .icon[src] {
 	visibility: visible;
+}
+
+canvas {
+	image-rendering: pixelated;
 }
